# smart_menu

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  conftest.py  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js
.github/workflows/: ci-cd.yml
api/v1/: urls.py
api/v1/common/uow/: django_uow.py
api/v1/menu/: serializers.py  urls.py  views.py
api/v1/menu/dto/: menu_dto.py
api/v1/menu/interfaces/: menu.py
api/v1/menu/repositories/: menu_repository.py
api/v1/menu/services/: menu_generator.py  shopping_cart.py
api/v1/menu/usecases/: create_menu_usecase.py  generate_shopping_cart_usecase.py  update_menu_usecase.py
api/v1/recipe/: __init__.py  constants.py  selectors.py  serializers.py  tasks.py  urls.py  views.py
api/v1/recipe/dto/: recipe_dto.py
api/v1/recipe/interfaces/: recipe_parser.py  uow.py
api/v1/recipe/mappers/: recipe_mapper.py
api/v1/recipe/repositories/: recipe_repository.py
api/v1/recipe/services/: image_service.py  llm.py  recipe_builder.py  recipe_parser.py  url_classifier.py  video_parser.py  web_parser.py
api/v1/recipe/tests/: test_repository.py  test_services.py  test_usecases.py  test_utils.py  test_views.py
api/v1/recipe/uow/: django_uow.py
api/v1/recipe/usecases/: create_recipe_usecase.py
api/v1/recipe/utils/: helpers.py
app/: asgi.py  celery.py  models.py  settings.py  storage.py  urls.py  views.py
menu/: models.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_allow_null_recipe_in_entry.py  0003_remove_unique_meal_per_date.py  0004_alter_menuplanentry_meal_type.py
menu/templatetags/: menu_extras.py
nginx/conf.d/: smart_menu.conf
notifications/: choices.py  consumers.py  context_processors.py  models.py  routing.py  services.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_notification_link.py
product/: admin.py  choices.py  forms.py  mixins.py  models.py  urls.py  views.py
product/fixtures/: products_seed.sql
product/migrations/: 0001_initial.py  0002_initial.py  0002_product_category.py  0003_alter_product_category.py  0003_enable_pg_trgm.py  0004_alter_product_category.py
product/tests/: conftest.py  test_forms.py  test_mixins.py  test_models.py  test_views.py
recipe/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
recipe/migrations/: 0001_initial.py  0002_initial.py  0002_recipeingredient_recipe.py  0003_alter_recipesource_metadata.py  0003_recipe_created_by.py  0004_alter_recipe_image.py  0004_alter_recipe_servings.py  0005_add_uncategorized_meal_type.py  0005_alter_recipeingredient_quantity.py  0006_recipesource_alter_recipeingredient_options_and_more.py  0006_set_default_uncategorized.py  0007_delete_recipesource.py  0008_recipesource.py  0009_recipesource_error_message.py  0010_recipe_tips.py  0011_recipesource_added_by_recipesource_source_and_more.py  0012_alter_recipesource_url_and_more.py  0013_remove_recipesource_unique_recipe_per_user_and_more.py
recipe/tests/: conftest.py  test_forms.py  test_models.py  test_views.py
static/: input.css  output.css
staticfiles/: default.avif  input.css  output.css
templates/: 404.html  base.html  home.html
templates/account/: login.html  signup.html
templates/menu/: create.html  detail.html  list.html  shopping_cart.html
templates/menu/partials/: recipe_picker_results.html
templates/notifications/: list.html
templates/product/: delete.html  detail.html  form.html  list.html  product_list_partial.html
templates/product/partials/: modal.html  options.html  product_options.html  search_results_filter.html
templates/recipe/: create.html  delete.html  detail.html  form.html  list.html  my_list.html
templates/socialaccount/: authentication_error.html  login.html  signup.html
templates/users/: login.html  signup.html
tests/conftest/: api_fixtures.py  product_fixtures.py  recipe_fixtures.py  user_fixtures.py
users/: admin.py  forms.py  managers.py  media_path.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_forms.py  test_models_and_managers.py
