[project]
name = "smart-menu"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-behaviors (>=0.5.1,<0.6.0)",
    "python-decouple (>=3.8,<4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-allauth[socialaccount] (>=65.11.2,<66.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "yt-dlp[default] (>=2025.11.12,<2026.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "ollama (>=0.6.1,<0.7.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "json-repair (>=0.56.0,<0.57.0)",
]


[tool.poetry]
packages = [
    {include = "app"},
    {include = "users"},
    {include = "product"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "django-stubs (>=5.2.5,<6.0.0)",
    "djangorestframework-stubs (>=3.16.3,<4.0.0)"
]
